# Dora-SSR

./: .gitattributes  .gitignore  .travis.yml  3rdparty-licenses.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  DCO.txt  LICENSE  LICENSE.txt  LICENSES.3rdparty.md  NOTICE  NOTICE.txt  README.md  README.zh-CN.md  appveyor.yml  main.scene.json
.github/workflows/: Linux.yml  android.yml  build-bgfx.yml  iOS.yml  ios.yml  linux.yml  macos.yml  main.yml  static.yml  ui.yml  windows.yml
Assets/: LICENSES  gamecontrollerdb.txt  imgui.ini  yueconfig.yue
Assets/Data/: data.xlsx  items.xlsx
Assets/DragonBones/: NewDragon_ske.json  NewDragon_tex.json
Assets/Image/: Units.clip  bunny.clip  dorothy.clip  duality.clip  items.clip  misc.clip  patreon.clip  poke.clip  villy.clip
Assets/Model/: KidM.model  KidW.model  Units.clip  Zombie1.model  Zombie2.model  block1.model  block2.model  block3.model  bossp.model  bunnyg.model  bunnyp.model  dorothy.model  flandre.clip  flandre.model  hpshow.clip  hpshow.model  jixienv.clip  jixienv.model  misc.clip  patreon.model  poke.model  switch.model  villy.model  xiaoli.clip  xiaoli.model
Assets/Particle/: blood.par  bloodp.par  boom.par  fire.par  heart.par  select.par
Assets/Script/: init.lua  init.yue  main.lua  test.moon  tlconfig.lua  yueconfig.yue
Assets/Spine/: dragon-ess.atlas  dragon-ess.skel  moling.atlas  moling.skel
Assets/TMX/: demo.tmx  platform.tmx
Doc/blog/: 2023-11-18-dora-ssr.md  authors.yml
Docs/: README.md  action-editor-progress.md  action-editor-web-ide-rebuild.md  body-editor-web-ide-rebuild.md  compute-pass-design-analysis.md  compute-pass-in-effect-analysis.md  compute-shader-scheduling-analysis.md  compute-shader-workflow-design.md  docusaurus.config.js  package.json  pnpm-lock.yaml  sidebars.js  tsconfig.json
Docs/blog/: 2023-11-18-dora-ssr.md  2024-3-25-indie-game-made-so-hard.md  2024-3-25-indie-game-made-so-hard.mdx  2024-4-15-rusty-game-dev.mdx  2024-4-17-a-moon-script-tale.mdx  2024-4-25-tsx-dev-intro.mdx  2024-8-14-dora-ssr-overview.mdx  2025-1-15-dora-wa.md  2025-1-20-year-of-snake.md  authors.yml
Docs/design/: dorax-tsx-attribute-handling.md  editor-migration.md  nanovg-fontmanager-sdf-text.md  particle-editor-web-ide-rebuild.md  tstl-coding-notes-for-llm.md  web-ide-coding-agent-plan-mode.md  web-ide-coding-agent-task-checklist.md  web-ide-coding-agent.md  web-ide-git-client-tasks.md  web-ide-git-client.md
Docs/docs/: action-editor-progress.md  action-editor-web-ide-rebuild.md
Docs/drafts/: dorax-tsx-attribute-handling.md
Docs/scripts/: generate-language-docs.js  update-version.js
Docs/src/: version.js
Progress/: Progress.lua  build.sh
Project/Android/: .gitignore  build.gradle  gradle.properties
Project/Android/Dora/app/: CMakeLists.txt  build.gradle
Project/Android/Dora/app/src/main/: AndroidManifest.xml
Project/Android/Dora/app/src/main/java/org/ippclub/dorothyssr/: MainActivity.java
Project/Android/Dora/app/src/main/res/drawable/: ic_launcher_foreground.xml
Project/Android/Dora/app/src/main/res/values/: strings.xml
Project/Android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Project/Android/app/src/androidTest/java/com/luvfight/dorothy/: ExampleInstrumentedTest.java
Project/Android/app/src/androidTest/java/org/ippclub/dorothyssr/: ExampleInstrumentedTest.java
Project/Android/app/src/main/: AndroidManifest.xml  assets  cpp
Project/Android/app/src/main/java/com/luvfight/dorothy/: MainActivity.java
Project/Android/app/src/main/java/org/libsdl/app/: SDLActivity.java
Project/Android/app/src/main/res/drawable/: ic_dorothy_ssr.xml  ic_launcher_foreground.xml
Project/Android/app/src/main/res/layout/: activity_main.xml
Project/Android/app/src/main/res/values/: strings.xml  styles.xml
Project/Android/app/src/test/java/com/luvfight/dorothy/: ExampleUnitTest.java
Project/Android/app/src/test/java/org/ippclub/dorothyssr/: ExampleUnitTest.java
Projects/Android/Dora/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Projects/Android/Dora/app/src/main/: AndroidManifest.xml  assets  cpp
Projects/Android/Dora/app/src/main/java/org/ippclub/dorassr/: MainActivity.java
Projects/Android/Dora/app/src/main/res/layout/: activity_main.xml
Projects/Android/Dora/app/src/main/res/values/: strings.xml  styles.xml
Projects/Android/Dora/app/src/main/res/xml/: network_security_config.xml  provider_path.xml
Projects/Linux/: CMakeLists.txt  makefile
Site/: docusaurus.config.js  package.json  sidebars.js
Source/: Dora.h  Dorothy.h
Source/ML/: ML.cpp  (+1 more)
Source/Rust/: Cargo.toml  rustfmt.toml
Source/Rust/src/: lib.rs
Source/Rust/src/bgfx_rs/: mod.rs  static_lib.rs
Source/Rust/src/bgfx_rs/bgfx_sys/: ffi.rs  mod.rs
Source/Rust/src/dora_3d/: animation.rs  c_api.rs  camera3d.rs  jolt.rs  light3d.rs  material.rs  mesh.rs  mod.rs  model_loader.rs  node3d.rs  profile3d.rs  renderer3d.rs  shader.rs  skinning.rs  texture.rs  types.rs  visual3d.rs
Tools/dora-cli/: README.md  README.zh-CN.md  dora.py  pyproject.toml
Tools/dora-rust/dora/: Cargo.toml  README.md  README.zh-CN.md
Tools/dora-rust/dora/src/: dora.rs  lib.rs
Tools/dora-rust/dora/src/dora/: action.rs  action_def.rs  align_node.rs  app.rs  array.rs  audio.rs  audio_bus.rs  audio_source.rs  body.rs  body_3d.rs  body_def.rs  body_def_3d.rs  buffer.rs  c_45.rs  cache.rs  camera.rs  camera_2d.rs  camera_otho.rs  character_controller_3d.rs  clip_node.rs  constraint_3d.rs  content.rs  controller.rs  db.rs  dbparams.rs  dbquery.rs  dbrecord.rs  dictionary.rs  directional_light_3d.rs  director.rs  dragon_bone.rs  draw_node.rs  ease.rs  effect.rs  effek_node.rs  entity.rs  fixture_def.rs  fixture_def_3d.rs  grabber.rs  grid.rs  (+52 more)
Tools/dora-rust/dora/src/dora/platformer/: action_update.rs  behavior.rs  bullet.rs  bullet_def.rs  data.rs  decision.rs  face.rs  platform_camera.rs  platform_world.rs  target_allow.rs  unit.rs  unit_action.rs  visual.rs
Tools/dora-rust/dora/src/dora/platformer/behavior/: blackboard.rs  tree.rs
Tools/dora-rust/dora/src/dora/platformer/decision/: ai.rs  tree.rs
bak/: imgui.ini
(+3932 files in other folders)
